add_subdirectory(net_plugin)
add_subdirectory(net_api_plugin)
#add_subdirectory(p2p_plugin)
add_subdirectory(http_plugin)
add_subdirectory(chain_plugin)
add_subdirectory(chain_api_plugin)
add_subdirectory(producer_plugin)
add_subdirectory(account_history_plugin)
add_subdirectory(account_history_api_plugin)
add_subdirectory(wallet_plugin)
add_subdirectory(wallet_api_plugin)
add_subdirectory(txn_test_gen_plugin)
add_subdirectory(faucet_testnet_plugin)

if(BUILD_MONGO_DB_PLUGIN)
  find_package(libmongoc-1.0 1.8)

  if (libmongoc-1.0_FOUND)
    add_subdirectory(mongo_db_plugin)
  else()
    message("Could NOT find MongoDB. mongo_db_plugin will be omitted.")
  endif()
endif()
