add_subdirectory( nodeos )
add_subdirectory( cleos )
add_subdirectory( keosd )
add_subdirectory( eosio-launcher )
add_subdirectory( eosio-blocklog )
add_subdirectory( nodeos-sectl )
if (ENABLE_RODEOS)
   add_subdirectory( rodeos )
endif()
if (ENABLE_TESTER)
   add_subdirectory( eosio-tester )
endif()
